[gd_scene load_steps=7 format=3 uid="uid://bmdgkfeb7pyi3"]

[ext_resource type="Script" path="res://script1.gd" id="1_0cblx"]
[ext_resource type="Texture2D" uid="uid://fa40whg1isbq" path="res://ball.png" id="1_2bqwo"]
[ext_resource type="Texture2D" uid="uid://b1lujpuobbrgd" path="res://left_pallete.png" id="2_pqi5b"]
[ext_resource type="Texture2D" uid="uid://ioiqe8g0wr41" path="res://right_pallete.png" id="3_ilctm"]
[ext_resource type="Texture2D" uid="uid://diypk8lvekxi6" path="res://separator.png" id="4_p7qxo"]
[ext_resource type="AudioStream" uid="uid://duvgn1tb7h38n" path="res://Ball Bounce.mp3" id="6_0i3x4"]

[node name="Game Frame" type="Node2D"]
script = ExtResource("1_0cblx")

[node name="Ball" type="Sprite2D" parent="."]
top_level = true
position = Vector2(320, 200)
texture = ExtResource("1_2bqwo")

[node name="PlayerController" type="Sprite2D" parent="."]
position = Vector2(67, 183)
texture = ExtResource("2_pqi5b")

[node name="Wall" type="Sprite2D" parent="."]
position = Vector2(577, 187)
texture = ExtResource("3_ilctm")

[node name="Separator" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("4_p7qxo")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0i3x4")

[node name="Score" type="Label" parent="."]
offset_left = 299.0
offset_top = 4.0
offset_right = 342.0
offset_bottom = 27.0
text = "0 | 0"
horizontal_alignment = 1

[node name="HelpButton" type="Button" parent="."]
offset_left = 610.0
offset_top = 367.0
offset_right = 638.0
offset_bottom = 398.0
action_mode = 0
text = "?
"

[node name="PauseMenu" type="MarginContainer" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = 590.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLabel" type="Label" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 0
text = "Welcome to Pong!"
horizontal_alignment = 1

[node name="BottomLabel" type="Label" parent="PauseMenu"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 8
text = "To begin, press the 'S' key. To move up and down, press the 'UP' and 'DOWN' arrow keys respectfully."
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseHelpButton" type="Button" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "X"
